# -NTT-

./: CMakeLists.txt  README.md
results/: sample_results.csv
scripts/: run_bench.ps1  run_bench.sh
src/: ntt_bench.cpp
